@@ -1,3 +1,15 @@
+2008-06-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c: (create_dialog), (accel_set_func),
+	(description_set_func), (keybinding_key_changed),
+	(keybinding_description_changed), (clear_old_model),
+	(append_keys_to_tree), (parse_start_tag),
+	(append_keys_to_tree_from_file), (append_keys_to_tree_from_gconf),
+	(cb_check_for_uniqueness), (accel_edited_callback),
+	(accel_cleared_callback), (description_edited_callback),
+	(real_start_editing_cb), (start_editing_cb), (setup_dialog):
+	make editing the shortcut action work for custom bindings
+
 2008-05-31  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keybinding-properties.c: (append_keys_to_tree),
